@@ -40,6 +40,7 @@ extern int audiocoreaudio_fifo_buffer_size_multiplier;
 
 extern int coreaudio_note_on(unsigned char channel, unsigned char note,unsigned char velocity);
 extern int coreaudio_note_off(unsigned char channel, unsigned char note,unsigned char velocity);
+extern int coreaudio_change_instrument(unsigned char instrument);
 extern void coreaudio_midi_output_flush_output(void);
 extern int coreaudio_mid_initialize_all(void);
 extern void coreaudio_mid_finish_all(void);
